updated web page

--- a/index.html
+++ b/index.html
@@ -5,15 +5,6 @@
 </head>
 
 <body>
-  <a href = "index.html">
-<div class="top_container">
-   <img src = "kgrasshopper_crop.jpeg" style="float:left;height:150px;margin-right:15px;"></img>
-    <h1> Katelyn M. Gostic </h1>
-    <h2> James S. McDonnell Foundation Postdoctoral Fellow </h2>
-    <h2> University of Chicago </h2>
-    <h2> kgostic(at)uchicago.edu</h2>
-</div>
-  </a>
 
   <h3> Estimated effectiveness of traveller screening to prevent international spread of 2019 novel coronavirus (2019-nCoV) </h3>
 
@@ -25,7 +16,11 @@
 4Fogarty International Center, National Institutes of Health, United States <br>
 *Correspondence to: kgostic@uchicago.edu & jlloydsmith@ucla.edu  </p>
 
-  <p> This manuscript has been submitted to medrxiv, and for peer review. We make it available here while the doi is pending. </p>
+  <p> This manuscript has been submitted to medrxiv, and for peer review. We make it available here while the doi is pending. <br> </p>
+
+  <p> Code to support these analyses are in the attached <a href="https://github.com/kgostic/traveller_screening">Github repo</a>. <br> </p>
+
+  <p> Users can interactively test scenarios of interest and input up-to-date paramters into the model using this <a href="https://faculty.eeb.ucla.edu/lloydsmith/screeningmodel">Shiny app</a>. </p>
 
 
 <iframe src="Manuscript_initial_submission.pdf" style="border:none;" width="100%" height = "650px"></iframe>
