Slight edit to header text

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 4Fogarty International Center, National Institutes of Health, United States <br>
 *Correspondence to: kgostic@uchicago.edu & jlloydsmith@ucla.edu  </p>
 
-  <p> This manuscript has been submitted to medrxiv, and for peer review. We make it available here while the doi is pending. <br> </p>
+  <p> As of 28 Jan, 2020 this manuscript has been submitted to medrxiv, and for peer review. We make it available here while the doi is pending. <br> </p>
 
   <p> Code to support these analyses are in the attached <a href="https://github.com/kgostic/traveller_screening">Github repo</a>. <br> </p>
 
