updated page text

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
   <p> Code to support these analyses are in the attached <a href="https://github.com/kgostic/traveller_screening">Github repo</a>. <br> </p>
 
-  <p> Users can interactively test scenarios of interest and input up-to-date paramters into the model using this <a href="https://faculty.eeb.ucla.edu/lloydsmith/screeningmodel">Shiny app</a>. </p>
+  <p> An interactive version of the model is available <a href="https://faculty.eeb.ucla.edu/lloydsmith/screeningmodel">here</a>. </p>
 
 
 <iframe src="Manuscript_initial_submission.pdf" style="border:none;" width="100%" height = "650px"></iframe>
